added remaining aria-label values

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -6,7 +6,7 @@
         </div>
         <div class="row" data-cues="slideInDown" data-group="page-title" data-delay="100">
           <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#101;&#114;&#118;&#105;&#99;&#101;&#115;&#64;&#97;&#120;&#111;&#112;&#115;&#46;&#116;&#101;&#99;&#104;" class="btn btn-sm btn-primary rounded-pill">
+            <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#101;&#114;&#118;&#105;&#99;&#101;&#115;&#64;&#97;&#120;&#111;&#112;&#115;&#46;&#116;&#101;&#99;&#104;" class="btn btn-sm btn-primary rounded-pill" aria-label="Contact Us">
               Contact Us (<span>&#115;&#101;&#114;&#118;&#105;&#99;&#101;&#115;&#64;&#97;&#120;&#111;&#112;&#115;&#46;&#116;&#101;&#99;&#104;</span>)
             </a>
           </div>
