added aria-label values in training layout

--- a/_layouts/training.html
+++ b/_layouts/training.html
@@ -13,7 +13,7 @@
       <div class="container py-14 py-md-16">
         <div class="row text-center">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}">HOME</a> > <a href="{{ site.url }}/{{ mainconfig.tagline_href }}">{{ mainconfig.tagline_href | upcase }}</a> > {{ pageconfig.title }}</h2>
+            <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}" aria-label="Home Page">HOME</a> > <a href="{{ site.url }}/{{ mainconfig.tagline_href }}" aria-label="{{ mainconfig.tagline_href | upcase }}">{{ mainconfig.tagline_href | upcase }}</a> > {{ pageconfig.title }}</h2>
             <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
             <h2 class="fs-15 text-uppercase text-muted mb-12">See below for the training programmes we offer</h2>
             <hr />
@@ -55,7 +55,7 @@
               <!--/column -->
             </div>
             <!--/.row -->
-            <a href="#schedule" class="btn btn-primary rounded-pill mt-6 mb-0">Schedule Training Sessions Here</a>
+            <a href="#schedule" class="btn btn-primary rounded-pill mt-6 mb-0" aria-label="Schedule Training Sessions Here">Schedule Training Sessions Here</a>
           </div>
           <!--/column -->
         </div>
