--- a/assets/fonts/thicccboi/thicccboi.css
+++ b/assets/fonts/thicccboi/thicccboi.css
@@ -4,7 +4,7 @@
     url('THICCCBOI-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;  
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'THICCCBOI';
@@ -12,7 +12,7 @@
     url('THICCCBOI-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;  
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'THICCCBOI';
@@ -20,5 +20,5 @@
     url('THICCCBOI-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;  
-  font-display: block;
+  font-display: swap;
 }
