--- a/assets/fonts/urbanist/urbanist.css
+++ b/assets/fonts/urbanist/urbanist.css
@@ -4,7 +4,7 @@
         url('Urbanist-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -12,7 +12,7 @@
         url('Urbanist-SemiBoldItalic.woff') format('woff');
     font-weight: 600;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -20,7 +20,7 @@
         url('Urbanist-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -28,7 +28,7 @@
         url('Urbanist-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -36,7 +36,7 @@
         url('Urbanist-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -44,7 +44,7 @@
         url('Urbanist-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -52,7 +52,7 @@
         url('Urbanist-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -60,7 +60,7 @@
         url('Urbanist-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -68,7 +68,7 @@
         url('Urbanist-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Urbanist';
@@ -76,5 +76,5 @@
         url('Urbanist-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
