--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -130,7 +130,7 @@
               <a href="{{ site.url }}/about-us/contact" class="btn btn-sm btn-primary rounded-pill" aria-label="Get in touch today!">Contact Us</a>
             </li>
             <li class="nav-item d-lg-none">
-              <button class="hamburger offcanvas-nav-btn"><span></span></button>
+              <button class="hamburger offcanvas-nav-btn" aria-label="Navigation Menu"><span></span></button>
             </li>
           </ul>
           <!-- /.navbar-nav -->
