--- a/_includes/contact-form-4.html
+++ b/_includes/contact-form-4.html
@@ -26,7 +26,7 @@
                   <h2 class="display-4 mb-3">Let’s Talk</h2>
                   <p class="lead fs-lg">Would you like to learn more about our services?</p>
                   <p>Reach out via the contact form below and we'll be in touch within 24 hours.</p> 
-                  <p>Who knows.. we might just <a target="_blank" href="{{ site.url }}/case-studies" aria-label="{{ site.data.pageconfig.index.button_cta2_aria_label }}">make something great together!</a> 🤝</p>
+                  <p>Who knows.. we might just <a target="_blank" href="{{ site.url }}/case-studies" aria-label="{{ site.data.pageconfig.index.button_cta2_aria_label }}">make something great together</a> 🤝</p>
                   <a href="#contactform" aria-label="Contact Us" class="btn btn-primary rounded-pill mt-2">Complete The Form Below</a>
                 </div>
                 <!--/div -->
